WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122749
[EFL] Buildfix after
r157393
https://bugs.webkit.org/show_bug.cgi?id=122749
Summary
[EFL] Buildfix after r157393
Krzysztof Czech
Reported
2013-10-14 05:16:51 PDT
/mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebCore/css/CSSCalculationValue.cpp: In function 'bool WebCore::hasDoubleValue(WebCore::CSSPrimitiveValue::UnitTypes)': /mnt/buildbot/efl-linux-slave-3/efl-linux-32-release/build/Source/WebCore/css/CSSCalculationValue.cpp:84:12: error: enumeration value 'CSS_FR' not handled in switch [-Werror=switch]
Attachments
Patch
(1.23 KB, patch)
2013-10-14 05:19 PDT
,
Krzysztof Czech
kling
: review-
Details
Formatted Diff
Diff
Patch
(1.25 KB, patch)
2013-10-14 06:12 PDT
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Czech
Comment 1
2013-10-14 05:19:54 PDT
Created
attachment 214144
[details]
Patch
Andreas Kling
Comment 2
2013-10-14 05:22:50 PDT
Comment on
attachment 214144
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=214144&action=review
> Source/WebCore/css/CSSCalculationValue.cpp:114 > + case CSSPrimitiveValue::CSS_FR:
Is this correct? It seems that CSS_FR would be represented by a double value internally.
Andreas Kling
Comment 3
2013-10-14 05:45:11 PDT
Comment on
attachment 214144
[details]
Patch hasDoubleValue() should return true for CSS_FR.
Krzysztof Czech
Comment 4
2013-10-14 06:12:37 PDT
Created
attachment 214147
[details]
Patch
Krzysztof Czech
Comment 5
2013-10-14 06:15:06 PDT
(In reply to
comment #3
)
> (From update of
attachment 214144
[details]
) > hasDoubleValue() should return true for CSS_FR.
Yes, you are right. Thanks.
Anders Carlsson
Comment 6
2013-10-14 06:38:21 PDT
Comment on
attachment 214147
[details]
Patch Clearing flags on attachment: 214147 Committed
r157397
: <
http://trac.webkit.org/changeset/157397
>
Anders Carlsson
Comment 7
2013-10-14 06:38:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug