[EFL] Buildfix after r157393 https://bugs.webkit.org/show_bug.cgi?id=122749

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-10-14
Reviewed by Andreas Kling.

Buildfix with error enumeration value 'CSS_FR' not handled in switch.

* css/CSSCalculationValue.cpp:
(WebCore::hasDoubleValue):

Canonical link: https://commits.webkit.org/140866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157397 268f45cc-cd09-0410-ab3c-d52691b4dbfc